2009-04-18
	* Minor bugfix related to naming with "'".
	* Add "Clean Project" button.
	
2009-04-17
	* Add documents of RQDA2tm.Rd,retrieval.Rd and GetAttr.Rd.
	* Conditional retrieval can be conditional on multiple cases/filecategories now: The codings can be from either case/filecategory.
	
2009-04-16
	* GetFileId() can return fid of selected files now.
	
2009-04-15
	* "Add To ..." popup menu of files.of.category Widget.
	* bugfixes of codes Tab and Attrs Tab: now can handle code containing "'" correctly.
	* reorganization of files: rename.r is merged to utils.R; Variables.R is renamed to Atrributes.R; AddVarWidget.R is renamed to AttributesWidget.R (rev 87).
	* retrieval() is exported for conditional coding-retrieval.
	
2009-04-14
	* Delete multiple files at a time now.
	* "Delete selected file" and "rename selected file" popup menu of files.of.category Widget.

2009-04-13
	* improve retrieval2() to place cursor at the beginning of the retrieved coding widget.
	* Add cliked handler to C2Info widget.

2009-04-12
	* Double-click handler of Attrs and Journal Tabs.
	* "Show coded/uncoded files only" popup menu for File Category.
	* conditional retrieval.

2009-04-10
	* rename button of journal Tab
	* bugfixes of Attrs Tab.
	* change the name of PushBack() to ShowSubset(): avoid the confusion of base:::pushBack().

2009-04-08
	* Add journal Tab (rename button is not implemented yet).
	
2009-04-07
	* Modify MemoWidget() to set the default fontsize as 11pt.
	* Fix all bugs caused by change of enc(): encoding issue.
	* new function of PushBack().

2009-04-06
	* Minor bugfix of write.FileList() which is caused by change of enc().
	* Minor bugfixes of AddTo buttons in C-cat and F-cat Tabs.
	* gselect.list() is documented and exported.
	* new function of GetAttr().
	* Minor bugfix of rename() and RenameAttrButton(): handling the duplicated name correctly now.
	
2009-04-01
	* gselect.list has two new argument: width and height.

2009-03-28