@@ -88,11 +88,11 @@ h1 {
 <h1>How to cite the software</h1>
 <p>I have put a lot of efforts on this project. I appreciate if you can cite this software in your research. You can use <i>citation("RQDA")</i> to get this citation.
 
-<p>HUANG Ronggui (2008). RQDA: R-based Qualitative Data Analysis. R package version 0.1.6. http://rqda.r-forge.r-project.org/
+<p>HUANG Ronggui (2009). RQDA: R-based Qualitative Data Analysis. R package version 0.1-7. http://rqda.r-forge.r-project.org/
 
 <h1>What's new in the latest version?</h1>
 <p>RQDA 0.1-6 is now on <A href ="http://cran.r-project.org/web/packages/RQDA/index.html" target="_blank">CRAN</a> (2008-12-26).
-<p>RQDA has been actively developed. You can click <A HREF="ChangeLog">here</A> to see the new features.
+<p>RQDA has been actively developed. You can click <A HREF="ChangeLog">here</A> to see the new features. There are few known-bugs, click <A HREF="KnownBugs">KnownBugs</A> for details.
 
 <h1>More Informaiton</h1>
 
