@@ -1,11 +1,13 @@
+2009-04-19
+	* New function of GetFileIdSets, can be used to do more complex conditional retrieval.
+	
 2009-04-18
 	* Minor bugfix related to naming with "'".
 	* Add "Clean Project" button.
 	
 2009-04-17
 	* Add documents of RQDA2tm.Rd,retrieval.Rd and GetAttr.Rd.
-	* Conditional retrieval can be conditional on multiple cases/filecategories now: The codings can be from either case/filecategory.
-	
+
 2009-04-16
 	* GetFileId() can return fid of selected files now.
 	
